CoinJoin uses PSBT
